[gd_scene load_steps=8 format=1]

[ext_resource path="res://enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://sheets/sheet.ufoGreen.atex" type="Texture" id=2]
[ext_resource path="res://audio/laser_shot.wav" type="Sample" id=3]
[ext_resource path="res://enemy/ufo_paths.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 44.8482

[sub_resource type="SampleLibrary" id=2]

samples/shot = {
"db": -20.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}

[sub_resource type="Animation" id=3]

resource/name = "rotate"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="enemy" type="KinematicBody2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 8
collision/mask = 6
collision/margin = 0.08
script/script = ExtResource( 1 )
shield_level = 3
bullet_speed = 500

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 2 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="rotate_anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/rotate = SubResource( 3 )
playback/active = true
playback/speed = 0.6
blend_times = [  ]
autoplay = "rotate"

[node name="ufo_paths" parent="." instance=ExtResource( 4 )]

[node name="shot_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="shot_timer" to="." method="_on_auto_shot_timeout"]


